--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body {
   background-color: aqua;
 }
-.app-content {
+.App-content {
   background-color: aliceblue;
+  border-radius: 15px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  margin: 50px auto;
+  max-width: 700px;
+  padding: 35px;
 }
