Playfair display font added to html and styled

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
   background-color: aqua;
+  font-family: "Playfair Display", serif;
 }
+
 .App-content {
   background-color: aliceblue;
   border-radius: 15px;
