--- a/style.css
+++ b/style.css
@@ -1,13 +1,39 @@
 body {
-  background-color: aqua;
+  background-color: rgba(102, 93, 121, 0.6);
   font-family: "Playfair Display", serif;
 }
 
 .App-content {
   background-color: aliceblue;
   border-radius: 15px;
-  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.4);
   margin: 50px auto;
   max-width: 700px;
   padding: 35px;
+}
+header {
+  border-bottom: 1px solid rgba(102, 93, 121, 0.09);
+  padding: 0 0 30px 0;
+}
+.search-input {
+  background-color: rgba(102, 93, 121, 0.1);
+  border: none;
+  border-radius: 6px;
+  padding: 20px 30px;
+  width: 70%;
+}
+.search-button {
+  background-color: rgba(138, 43, 226, 0.7);
+  border: none;
+  border-radius: 6px;
+  color: azure;
+  margin-left: 7px;
+  padding: 20px 35px;
+}
+.search-form {
+  margin-bottom: ;
+}
+footer {
+  border-top: 1px solid rgba(102, 93, 121, 0.09);
+  padding: 30px 0 0 0;
 }
