--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body {
   background-color: rgba(102, 93, 121, 0.6);
   font-family: "Playfair Display", serif;
 }
-
+a {
+  color: rgba(138, 43, 226, 0.7);
+}
 .App-content {
   background-color: aliceblue;
   border-radius: 15px;
@@ -16,7 +18,7 @@ header {
   padding: 0 0 30px 0;
 }
 .search-input {
-  background-color: rgba(102, 93, 121, 0.1);
+  background-color: rgba(102, 93, 121, 0.2);
   border: none;
   border-radius: 6px;
   padding: 20px 30px;
@@ -27,13 +29,49 @@ header {
   border: none;
   border-radius: 6px;
   color: azure;
-  margin-left: 7px;
-  padding: 20px 35px;
+  font-size: 16px;
+  margin-left: 6px;
+  padding: 20px 40px;
 }
-.search-form {
-  margin-bottom: ;
+.app-data {
+  display: flex;
+  justify-content: space-around;
+  padding: 30px 0;
+}
+
+.current-city {
+  margin: 0;
+  font-size: 38px;
+}
+.weather-details {
+  line-height: 20px;
+}
+
+.dets {
+  color: #f65282;
+  font-weight: 700;
+}
+
+.current-temperature {
+  display: flex;
+}
+.icon {
+  font-size: 44px;
+  margin-top: 49px;
+}
+.temp-value {
+  font-size: 88px;
+  font-weight: 700;
+  margin-left: 1px;
+}
+.temp-units {
+  font-size: 30px;
+  font-weight: 700;
+  margin-top: 40px;
 }
 footer {
   border-top: 1px solid rgba(102, 93, 121, 0.09);
+  font-size: 15px;
   padding: 30px 0 0 0;
+  text-align: center;
 }
