--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ header {
 }
 .weather-details {
   line-height: 20px;
+  color: #5d616e;
 }
 
 .dets {
@@ -71,6 +72,27 @@ header {
   font-size: 30px;
   font-weight: 700;
   margin-top: 12px;
+}
+.forecast-data {
+  margin-top: 20px;
+  text-align: center;
+  color: black;
+}
+.forecast-day {
+  display: inline-block;
+  margin: 5px;
+  padding: 25px;
+  text-align: center;
+}
+.forecast-date {
+  font-size: 16px;
+  opacity: 0.7;
+}
+.forecast-temp {
+  font-size: 14px;
+}
+.forecast-temp-min {
+  opacity: 0.7;
 }
 footer {
   border-top: 1px solid rgba(102, 93, 121, 0.09);
