--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgba(102, 93, 121, 0.6);
-  font-family: "Playfair Display", serif;
+  font-family: "Arimo", sans-serif;
 }
 a {
   color: rgba(41, 27, 90, 0.9);
@@ -71,7 +71,7 @@ header {
 .temp-units {
   font-size: 30px;
   font-weight: 700;
-  margin-top: 12px;
+  margin-top: -4px;
 }
 .forecast-data {
   margin-top: 20px;
@@ -89,10 +89,14 @@ header {
   opacity: 0.7;
 }
 .forecast-temp {
-  font-size: 14px;
+  font-size: 15px;
 }
 .forecast-temp-min {
   opacity: 0.7;
+}
+.forecast-icon {
+  width: 50px;
+  height: 50px;
 }
 footer {
   border-top: 1px solid rgba(102, 93, 121, 0.09);
